<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/excludedResources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textExcludedResources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluded_resources"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textExcludedResourcesHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_app_excluded_resources_help" />

        <EditText
            android:id="@+id/firstExcludedResource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_resource"
            android:inputType="text" />
    </LinearLayout>

</ScrollView>