<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textMasterAddresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_addresses"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textMasterAddressesHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_addresses_help" />

       <LinearLayout
           android:id="@+id/masterAddresses"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical" />

       <ImageButton
           android:id="@+id/addMasterAddress"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="right"
           android:src="@android:drawable/ic_menu_add"
           android:onClick="onAddMasterAddressButtonClicked" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textDeviceAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_account"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/jid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

         <ImageButton
                android:id="@+id/editXmppCredentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_edit"
                android:onClick="onEditXmppCredentialsButtonClicked" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/advancedSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openAdvancedSettings"
            android:text="@string/advancedSettings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="registerAccount"
            android:text="@string/registerAccount"
            android:textSize="20sp" />

        <Button
            android:enabled="false"
            android:id="@+id/pingServer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Ping Server"
            android:textSize="20sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="showAbout"
            android:text="About"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>
